# fda-pharma-predictor

./: .gitignore  README.md  api.py  app.py  index.html  pyproject.toml  requirements.txt  train_and_save.py
.github/workflows/: deploy.yml
data/processed/: backtest_summary.json  backtest_trades_all.csv  backtest_trades_smallcap.csv  backtest_writeup.txt  feature_matrix.csv  loocv_probabilities.csv  ticker_map.csv  votes.csv
docs/: methodology.md
saved_model/: feature_names.pkl  model.pkl
scripts/: build_dataset.py  build_features.py  extract_votes.py  scrape_all.py
src/evaluation/: backtest.py
src/features/: dataset.py  feature_engineering.py
src/models/: ablation.py  train_evaluate.py
src/parsing/: vote_extractor.py
src/scraping/: odac_scraper.py
